--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ system-config-date-1.9.60.tar.bz2
 /system-config-date-1.10.3.tar.bz2
 /system-config-date-1.10.4.tar.bz2
 /system-config-date-1.10.5.tar.bz2
+/system-config-date-1.10.6.tar.bz2
